--- a/src/components/state/Events/style.css
+++ b/src/components/state/Events/style.css
@@ -29,7 +29,6 @@
   line-height: 1.5rem;
   list-style: none;
   margin-left: 1.75rem;
-  margin-top: -1.25rem;
   display: grid;
   grid-template-columns: 1fr 9fr;
 }
@@ -53,9 +52,12 @@
 }
 
 .EventName {
-  font-size: 2.25rem;
+  font-size: 2rem;
+  line-height: 45px;
   text-align: left;
   margin-left: 2.5rem;
+  margin-top:1rem;
+  margin-bottom: 1rem;
 }
 
 .AboutHeader {
