--- a/src/components/stateless/Resources/style.css
+++ b/src/components/stateless/Resources/style.css
@@ -17,10 +17,11 @@
 
 .resource-card {
   z-index: 1;
-  width: 528px;
-  height: 448px;
+  width: 540px;
+  height: 400px;
   background: #FFFFFF;
-  box-shadow: 0 10px 20px rgba(48, 47, 47, 0.19), 0 6px 6px rgba(53, 52, 52, 0.23);
+  -webkit-box-shadow: 0 10px 20px rgba(48, 47, 47, 0.19), 0 6px 6px rgba(53, 52, 52, 0.23);
+          box-shadow: 0 10px 20px rgba(48, 47, 47, 0.19), 0 6px 6px rgba(53, 52, 52, 0.23);
   grid-column: 9/9;
   grid-row: 3/8;
   margin-top: -2rem;
@@ -40,9 +41,8 @@
 }
 
 .ResourceTitle {
-  font-size: 2rem;
+  font-size: 1.8rem;
   text-align: left;
-  width: 25rem;
   margin-left: 2.5rem;
   margin-top: 1rem;
 }
