home(feat): update images and fix responsiveness (#47)
* Finished About Page

* Minor margin fix

* community(feat): incorporate mobile responsiveness for Landing and Events sections for screens <= 320px

* community(feat): further componentize member stories section

* community(feat): incorporate mobile responsiveness for member stories section for screens <= 320px

* community(feat): further componentized events, moved events to state due to utilization of condditional rendering

* community(feat): further componentized opportunities section, clean up some css for events and opportunities sections (made more localized)

* community(feat): further componentize resources section, localize css for member stories, resources, and events

* community(feat): incorporate mobile responsiveness for opportuntunities sections for screens <= 320px

* community(feat): incorporated responsiveness for events section across several screen sizes

* community(feat): incorporate responsiveness for opportunities section across several screen sizes

* community(feat): incorporate responsiveness for member stories section across several screen sizes

* events(feat): adjust image size when screen <= 768px

* community(feat): fix positioning of RedirectButton

* community(feat): incorporate responsiveness for resources section across several screen sizes

* member-stories(feat): minor adjustments for element positioning when screen is <= 320px

* home(fix): fix positioning of journey button for screen sizes <= 320px, 375px, 425px, and 600px

* home(feat): update images

* home(feat): fix issues w/ responsiveness as a result of updating the images

--- a/src/components/state/HomeCard/style.css
+++ b/src/components/state/HomeCard/style.css
@@ -6,16 +6,9 @@
   text-align: center;
 }
 
-.HomeCard:first-of-type {
-  margin-left: 175px;
-}
-
-.HomeCard:last-of-type {
-  margin-right: 180px;
-}
-
 .HomeCard img {
-  width: 500px;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
 }
 
 .HomeCard h2 {
@@ -38,8 +31,32 @@
   margin-bottom: 2rem;
 }
 
-.card-caption:last-of-type {
+.HomeCardLeft {
+  margin-left: 175px;
+}
+
+.HomeCardRight {
+  margin-right: 180px;
+}
+
+.HomeCardLeft img {
+  width: 390px;
+  height: 272px;
+}
+
+.HomeCardRight img {
+  width: 370px;
+  height: 275px;
+}
+
+.HomeCardRight .card-caption {
   width: 380px;
+}
+
+@media screen and (max-width: 1024px) {
+  .HomeCard {
+    width: 450px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -50,7 +67,8 @@
 
   .HomeCard img {
     width: 100%;
-    height: auto;
+    height: 200px;
+    margin-top: 3rem;
   }
 
   .HomeCard h2 {
@@ -73,11 +91,11 @@
     width: 400px;
   }
 
-  .HomeCard:first-of-type {
+  .HomeCardLeft {
     margin-left: 0px;
   }
 
-  .HomeCard:last-of-type {
+  .HomeCardRight {
     margin-right: 0px;
   }
 }
@@ -92,7 +110,7 @@
 @media screen and (max-width: 320px) {
   .HomeCard {
     width: 275px;
-    height: 330px;
+    height: 360px;
   }
 
   .HomeCard:first-of-type {
