--- a/src/components/stateless/Services/style.css
+++ b/src/components/stateless/Services/style.css
@@ -1,213 +1,10 @@
-div {
-  line-height: 1.5;
-}
-
-h3 {
-  font-size: 28px;
-  font-family: "Rubik", sans-serif;
-  font-weight: 500;
-}
-
 .services {
-  height: 1550px;
-  width: 75vw;
-  position: relative;
-  display: block;
-  margin: 35rem auto 5rem auto;
+  height: 100%;
+  width: 75%;
+  margin: auto;
+  padding-bottom: 7.5rem;
 }
 
 .services h2 {
   margin-bottom: 8rem;
-}
-
-.services-paragraph {
-  height: 108px;
-  width: 477px;
-  position: relative;
-  font-family: "Proxima-Nova", sans-serif;
-}
-
-.row-1, .row-2, .row-3 {
-  position: relative;
-  left: 0;
-}
-
-.row-1 {
-  margin-top: -3rem;
-}
-
-.row-1-text {
-  position: absolute;
-  top: 8rem;
-  right: 0;
-}
-
-.row-1 p {
-  width: 30vw;
-}
-
-.row-2 {
-  margin-top: 10rem;
-}
-
-.row-2 p {
-  width: 37.5vw;
-}
-
-.row-2 img {
-  position: absolute;
-  right: 0;
-  top: -12rem;
-}
-
-.row-3 {
-  margin-top: 6rem;
-}
-
-.row-3-text {
-  position: absolute;
-  top: 8rem;
-  right: -1rem;
-}
-
-.row-3 p {
-  width: 30vw;
-}
-
-@media screen and (max-width: 1024px) {
-  .services {
-    width: 92vw;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .services {
-    width: 88vw;
-    height: 1370px;
-    position: relative;
-    display: block;
-    margin: 5rem auto;
-  }
-
-  .services .section-label {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-  }
-
-  h3 {
-    font-size: 24px;
-  }
-
-  .services img {
-    width: 176px;
-    height: 170px;
-  }
-
-  .services p {
-    width: 84vw;
-    line-height: 27px;
-    font-size: 16px;
-    margin-top: -0.5rem;
-  }
-
-  .row-1 {
-    margin-top: -6rem;
-  }
-
-  .row-1-text, .row-3-text {
-    position: absolute;
-    top: 12rem;
-    right: 0;
-    text-align: right;
-  }
-
-  .row-2 {
-    margin-top: 30rem;
-  }
-
-  .row-2-text {
-    position: absolute;
-    top: 0rem;
-  }
-
-  .row-3 {
-    margin-top: 45rem;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .services {
-    width: 88vw;
-    height: 1140px;
-    position: relative;
-    display: block;
-    margin: 5rem auto;
-  }
-
-  .services .section-label {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-  }
-
-  h3 {
-    font-size: 18px;
-  }
-
-  .services img {
-    width: 176px;
-    height: 170px;
-  }
-
-  .services p {
-    width: 84vw;
-    line-height: 19px;
-    font-size: 12px;
-    margin-top: -0.5rem;
-  }
-
-  .row-1 {
-    margin-top: -6rem;
-  }
-
-  .row-1-text, .row-3-text {
-    position: absolute;
-    top: 12rem;
-    right: 0;
-    text-align: right;
-  }
-
-  .row-2 {
-    margin-top: 24rem;
-  }
-
-  .row-2-text {
-    position: absolute;
-    top: 0rem;
-  }
-
-  .row-3 {
-    margin-top: 34rem;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .services {
-    height: 1255px;
-  }
-
-  .row-2 {
-    margin-top: 25rem;
-  }
-
-  .row-3 {
-    margin-top: 37rem;
-  }
-}
-
-@media screen and (max-width: 375px) {
-  .services {
-    height: 1275px;
-  }
 }
