Community refactor css

--- a/src/components/state/Events/style.css
+++ b/src/components/state/Events/style.css
@@ -1,23 +1,21 @@
 .events-container {
-  height: 900px;
+  height: 100%;
   background: #EEF1F6;
   padding: 1rem;
 }
 
-.events-container .section-label {
-  margin-top: 5.25rem;
-}
-
 .event-card {
-  width: 52rem;
+  width: 100%;
   display: grid;
-  grid-template-columns: 27.5rem 25rem;
-  grid-template-rows: 32rem;
-  margin: auto;
+  grid-template-columns: 25rem 25rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 5rem;
 }
 
 .event-info {
-  height: 100%;
+  padding: 30px;
   background: #FFFFFF;
 }
 
@@ -28,14 +26,14 @@
   font-weight: normal;
   line-height: 1.5rem;
   list-style: none;
-  margin-left: 1.75rem;
   display: grid;
   grid-template-columns: 1fr 9fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .EventDetails img {
-  margin-top: 0.35rem;
-  display: block;
   margin: auto;
 }
 
@@ -48,152 +46,70 @@
   text-transform: uppercase;
   text-align: left;
   margin-top: 3rem;
-  margin-left: 2.5rem;
+}
+
+.EventImage img {
+  width: 25rem;
+  height: 100%;
+  display: block;
+  margin: auto;
 }
 
 .EventName {
   font-size: 2rem;
   line-height: 45px;
   text-align: left;
-  margin-left: 2.5rem;
-  margin-top:1rem;
   margin-bottom: 1rem;
 }
 
 .AboutHeader {
   font-family: "Proxima-Nova", sans-serif;
-  margin-left: 2.5rem;
-  margin-bottom: -0.25rem;
   color: black;
   letter-spacing: 0;
 }
 
 .AboutDesc {
-  width: 22.5rem;
-  font-family: "Proxima-Nova", sans-serif;
+  width: 100%;
   font-size: 12px;
+  font-family: "Proxima-Nova", sans-serif;
   font-weight: lighter;
   line-height: 21px;
-  margin-left: 2.5rem;
-  margin-bottom: 1.7rem;
+  margin-bottom: 45px;
 }
 
-.EventImage img {
+.EventImageMobile {
+  display: none;
+}
+
+.EventImageMobile img {
   width: 100%;
-  height: 100%;
+  margin-bottom: -1.5rem;
 }
 
-@media screen and (max-width: 768px) {
-  .events-container {
-    height: 1100px;
-    background: #EEF1F6;
-    padding-top: 1rem;
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
-  }
-
+@media screen and (max-width: 840px) {
   .event-card {
-    width: 90vw;
-    display: grid;
-    grid-template-columns: 90vw;
-    grid-template-rows: 750px;
-  }
-
-  .EventLabel {
-    font-size: 14px;
-    margin-top: 20.5rem;
-    margin-left: 1.3rem;
-  }
-
-  .EventImage img {
-    width: 84vw;
-    height: 18rem;
+    width: 25rem;
+    height: 100%;
     display: block;
+    padding-bottom: 5rem;
     margin: auto;
-    position: relative;
-    top: -45.5rem;
   }
 
-  .EventName {
-    font-size: 32px;
-    text-align: left;
-    margin-left: 1.2rem;
-    margin-top: -0.5rem;
+  .EventImage img {
+    display: none;
   }
 
-  .EventDetails {
-    margin-left: 1rem;
-    margin-top: -1rem;
-    font-size: 14px;
-  }
-
-  .AboutHeader {
-    margin-left: 1.4rem;
-    font-size: 14px;
-  }
-
-  .AboutDesc {
-    width: 82vw;
-    margin-left: 1.4rem;
-    font-size: 14px;
-  }
-
-  .event-card .RedirectButton {
-    margin-top: 2.5rem;
-    margin-right: 1rem;
+  .EventImageMobile {
+    display: block;
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
   .event-card {
-    grid-template-rows: 685px;
-  }
-
-  .EventLabel {
-    font-size: 12px;
-    margin-top: 16.5rem;
-  }
-
-  .EventImage img {
-    width: 84vw;
-    height: 45vh;
-    top: -41.5rem;
+    width: 95%;
   }
 
   .EventDetails {
-    font-size: 12px;
-  }
-
-  .AboutHeader {
-    margin-left: 1.4rem;
-  }
-
-  .AboutDesc {
-    width: 75vw;
-    font-size: 12px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .EventLabel {
-    font-size: 12px;
-    margin-top: 12.5rem;
-  }
-
-  .EventImage img {
-    width: 80vw;
-    height: 10rem;
-    top: -41.5rem;
-  }
-
-  .event-card .RedirectButton {
-    margin-top: 3rem;
-  }
-}
-
-@media screen and (max-width: 375px) {
-  .event-card .RedirectButton {
-    margin-top: 0.4rem;
+    font-size: 10px;
   }
 }
