--- a/src/components/stateless/Author/style.css
+++ b/src/components/stateless/Author/style.css
@@ -2,7 +2,6 @@
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  margin-left: 3.2rem;
   margin-top: -1rem;
   margin-bottom: 1.5rem;
 }
@@ -12,7 +11,13 @@
   font-family: "Proxima-Nova", sans-serif;
   font-size: 1rem;
   line-height: 28px;
-  margin-left: 6rem;
+  margin-left: 3rem;
   margin-bottom: 1.7rem;
   margin-top: -3.5rem;
+}
+
+@media screen and (max-width: 520px) {
+  .AuthorName {
+    font-size: .65rem;
+  }
 }
