community-events(fix): fix element positinoing

--- a/src/components/state/Events/style.css
+++ b/src/components/state/Events/style.css
@@ -29,8 +29,9 @@
   display: grid;
   grid-template-columns: 1fr 9fr;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-left: -0.5rem;
 }
 
 .EventDetails img {
@@ -99,6 +100,10 @@
     display: none;
   }
 
+  .EventDetails {
+    margin-left: -0.6rem;
+  }
+
   .event-card .RedirectButton {
     margin-top: 2.5rem;
     margin-right: 1rem;
@@ -118,12 +123,13 @@
     font-size: 12px;
   }
 
-  .AboutHeader {
-    margin-left: 1.4rem;
+  .EventDetails img {
+    margin-top: 5px;
+    margin-left: 2px;
   }
 
   .AboutDesc {
-    width: 75vw;
+    width: 70vw;
     font-size: 12px;
   }
 }
@@ -131,7 +137,8 @@
 @media screen and (max-width: 425px) {
   .EventLabel {
     font-size: 12px;
-    margin-top: 12.5rem;
+    margin-top: 2.5rem;
+    margin-bottom: 1rem;
   }
 
   .EventImage img {
@@ -146,6 +153,14 @@
 }
 
 @media screen and (max-width: 375px) {
+  .EventDetails {
+    width: 15rem;
+  }
+
+  .EventDetails li {
+    margin-left: -5px;
+  }
+
   .event-card .RedirectButton {
     margin-top: 0.4rem;
     font-size: 10px;
