community(feat): use flexbox instead of grid for element positioning (#51)
* Finished About Page

* Minor margin fix

* community(feat): incorporate mobile responsiveness for Landing and Events sections for screens <= 320px

* community(feat): further componentize member stories section

* community(feat): incorporate mobile responsiveness for member stories section for screens <= 320px

* community(feat): further componentized events, moved events to state due to utilization of condditional rendering

* community(feat): further componentized opportunities section, clean up some css for events and opportunities sections (made more localized)

* community(feat): further componentize resources section, localize css for member stories, resources, and events

* community(feat): incorporate mobile responsiveness for opportuntunities sections for screens <= 320px

* community(feat): incorporated responsiveness for events section across several screen sizes

* community(feat): incorporate responsiveness for opportunities section across several screen sizes

* community(feat): incorporate responsiveness for member stories section across several screen sizes

* events(feat): adjust image size when screen <= 768px

* community(feat): fix positioning of RedirectButton

* community(feat): incorporate responsiveness for resources section across several screen sizes

* member-stories(feat): minor adjustments for element positioning when screen is <= 320px

* community(feat): add footer

* community(fix): fix positioning of event image and RedirectButton found in the opportunities section

* community(feat): update images

* community(fix): fix positioning of RedirectButton

* community(fix): fix positioning of landing image

* community-events(fix): fix element positinoing

* member-stories(fix): fix element positioning

* member-stories(fix): fix ms container height

* community-resources(feat): use flexbox instead of grid for elem

--- a/src/components/state/Events/style.css
+++ b/src/components/state/Events/style.css
@@ -29,8 +29,9 @@
   display: grid;
   grid-template-columns: 1fr 9fr;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-left: -0.5rem;
 }
 
 .EventDetails img {
@@ -99,6 +100,15 @@
     display: none;
   }
 
+  .EventDetails {
+    margin-left: -0.6rem;
+  }
+
+  .event-card .RedirectButton {
+    margin-top: 2.5rem;
+    margin-right: 1rem;
+  }
+
   .EventImageMobile {
     display: block;
   }
@@ -110,6 +120,48 @@
   }
 
   .EventDetails {
-    font-size: 10px;
+    font-size: 12px;
+  }
+
+  .EventDetails img {
+    margin-top: 5px;
+    margin-left: 2px;
+  }
+
+  .AboutDesc {
+    width: 70vw;
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .EventLabel {
+    font-size: 12px;
+    margin-top: 2.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .EventImage img {
+    width: 80vw;
+    height: 10rem;
+    top: -41.5rem;
+  }
+
+  .event-card .RedirectButton {
+    margin-top: 3rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .EventDetails {
+    width: 15rem;
+  }
+
+  .EventDetails li {
+    margin-left: -5px;
+  }
+
+  .event-card .RedirectButton {
+    margin-top: 0;
   }
 }
