--- a/src/components/stateless/MemberStories/style.css
+++ b/src/components/stateless/MemberStories/style.css
@@ -53,7 +53,7 @@
   letter-spacing: 2px;
   text-transform: uppercase;
   text-align: left;
-  margin-top: 4.5rem;
+  margin-top: 3.5rem;
 }
 
 .MemberStoriesTitle {
@@ -69,9 +69,11 @@
   width: 120%;
 }
 
-
-
 @media screen and (max-width: 795px) {
+  .ms-container {
+    height: 800px;
+  }
+
   .ms-card {
     position: relative;
     margin-left: auto;
@@ -79,24 +81,76 @@
     margin-top: -3rem;
     width: 75%;
     right: auto;
+    height: 200px;
   }
 
   .MemberStoriesLabel {
     margin-top: 1.5rem;
+    margin-left: 0.2rem;
+  }
+
+  .MemberStoriesTitle {
+    font-size: 1.5rem;
+    line-height: 26px;
+    margin-left: 0.2rem;
+    margin-top: -0.5rem;
+    margin-bottom: 2rem;
+  }
+
+  .ms-card .AuthorPic {
+    margin-left: 0.2rem;
+  }
+
+  .ms-card .AuthorName {
+    font-size: 12px;
+    margin-bottom: 2.75rem;
+    margin-left: 4rem;
+  }
+
+  .ms-card .RedirectButton a {
+    margin-top: -2rem;
+    margin-right: -0.5rem;
   }
 }
 
 @media screen and (max-width: 520px) {
+  .ms-container {
+    height: 700px;
+  }
+
   .ms-card {
     margin-top: -1.5rem;
+    height: 250px;
   }
 
   .ms-container h2 {
+    width: 258px;
+    line-height: 34px;
+  }
+
+  .ms-image {
+    width: 84vw;
+    height: 40vh;
+    margin-left: -0.5rem;
+  }
+
+  .MemberStoriesLabel, .MemberStoriesTitle, .ms-card .AuthorPic  {
+    margin-left: -0.5rem;
+  }
+
+  .ms-card .AuthorName {
+    margin-left: 3rem;
+  }
+
+  .ms-card .RedirectButton a {
+    margin-top: -1rem;
+    margin-right: -1rem;
     line-height: 35px;
   }
+
   .MemberStoriesTitle {
     line-height: 36px;
-    font-size: 1.8rem;
+    font-size: 18px;
   }
 
   .MemberStoriesImage {
